TiffPyramidMetadata: correct processing LABEL/MACRO